--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
 @killianfalle:registry=https://npm.pkg.github.com
-//npm.pkg.github.com/:_authToken=$GITHUB_PA_TOKEN
+//npm.pkg.github.com/:_authToken=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
